# Shader_Fun

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONSTELLATION_MODDING.md  GUIDE.md  README.md  constellations.json  parse_bsc.py  release.bat
.claude/: settings.local.json
.github/workflows/: release.yml
cmake/: CopyIfMissing.cmake
data/: constellations.json  constellations.schema.json
shaders/: fullscreen.vert  game_of_life.comp  gol_display.frag  moon.frag  moon.vert  neural_display.frag  neural_update.comp  particles_draw.frag  particles_draw.vert  particles_update.comp  pong_step.comp  sat_flare.comp  sat_point.frag  sat_point.vert  sat_sky.frag  sat_sky.vert  scene_mesh.frag  scene_mesh.vert  scene_sdf.frag  ui.frag  ui.vert
src/: App.cpp  App.h  AudioSystem.cpp  AudioSystem.h  Camera3D.h  Scene3D.cpp  Scene3D.h  Simulation.h  UIRenderer.cpp  UIRenderer.h  VulkanContext.cpp  VulkanContext.h  main.cpp
src/simulations/: GameOfLife.cpp  GameOfLife.h  NeuralCA.cpp  NeuralCA.h  Particles.cpp  Particles.h  SatelliteSim.cpp  SatelliteSim.h  Scene3DDemo.cpp  Scene3DDemo.h  StarCatalog.h  star_catalog.h
